--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -541,7 +541,13 @@
                 </Grid>
             </Grid>
             <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                        <Button  BorderThickness="1"  Margin="0,0,10,0" Height="35" Width="130"  BorderBrush="Black" Content="CANCEL" Command="{Binding CancelChanges_Command}" Foreground="White" Background="#A9ABB1" >
+                        <Button  BorderThickness="1"  Margin="0,0,10,0" Height="35" Width="130"  Content="CANCEL" Command="{Binding CancelChanges_Command}"
+                                  BorderBrush="Transparent"
+                
+            Foreground="Black" 
+                       
+            Background="#E9E9E9"
+                                 >
                     <Button.Resources>
                         <Style TargetType="{x:Type Button}">
                             <Style.Resources>
@@ -552,7 +558,12 @@
                         </Style>
                     </Button.Resources>
                 </Button>
-                <Button  BorderThickness="1" Height="35" Width="130"  BorderBrush="Black" Content="SAVE CHANGES" Foreground="White" Background="#91c84f" Command="{Binding SaveChanges_Comand}">
+                <Button  BorderThickness="1" Height="35" Width="130"   Content="SAVE CHANGES"
+                            BorderBrush="Transparent"
+               
+            Foreground="White" 
+            Background="#91c84f"
+                         Command="{Binding SaveChanges_Comand}">
                     <Button.Resources>
                         <Style TargetType="{x:Type Button}">
                             <Style.Resources>
