--- a/ideaForge/Pages/DashboardPages/IFDockPage.xaml
+++ b/ideaForge/Pages/DashboardPages/IFDockPage.xaml
@@ -281,6 +281,7 @@
     ItemsSource="{Binding PilotLocations}"
                 SelectedItem="{Binding SelectedLocation,Mode=TwoWay}"
      SelectedValue="{Binding SelectedLocationId}"   
+                       
                 VerticalAlignment="Center"
    />
                     </Border>
@@ -294,13 +295,13 @@
                         Grid.Row="1" Grid.Column="1"
                         Toggled="ToggleSwitch_Toggled"
                         Margin="0,0,0,0"
-                        IsOn="True"
+                        IsOn="{Binding IsActive,Mode=TwoWay}"
                         />
                 </Grid>
                 <!-- Row 0 Completed-->
 
                 <!-- Row 1 Started-->
-                <StackPanel  Grid.Row="1" Orientation="Vertical" x:Name="statusPanel1" Visibility="Hidden">
+                <StackPanel  Grid.Row="1" Orientation="Vertical" x:Name="statusPanel1" IsEnabled="False">
                     <Label
                             HorizontalAlignment="Left"
                             Margin="15,20,0,5"
@@ -323,11 +324,12 @@
                             VerticalAlignment="Center"
                             BorderBrush="Transparent"
                             Margin="2"
-    SelectedValuePath="city_Name"
-                        DisplayMemberPath="city_Name"
-    TextSearch.TextPath="city_Name"
-    ItemsSource="{Binding CityList}"
-     SelectedValue="{Binding RegisterModel.city}"    
+    SelectedValuePath="id"
+                        DisplayMemberPath="reasonDescription"
+    TextSearch.TextPath="reasonDescription"
+    ItemsSource="{Binding Reasons}"
+     SelectedValue="{Binding ReasonId}"  
+                            
                             Height="22"
                         
    />
@@ -339,13 +341,14 @@
                 <!-- Row 1 Completed-->
 
                 <!-- Row 2 Started-->
-                <Grid Grid.Row="2" x:Name="statusPanel2" Visibility="Hidden">
+                <Grid Grid.Row="2" x:Name="statusPanel2" IsEnabled="False" >
                     <Grid>
                         <Border Height="55" BorderBrush="#A9ABB1" Margin="15,0,15,0" BorderThickness="1" CornerRadius="5">
-                            <RichTextBox 
+                            <TextBox 
                             Margin="2"
                              BorderThickness="0"
                             BorderBrush="Transparent"
+                            Text="{Binding Comments}"
                             />
                         </Border>
                     </Grid>
@@ -355,7 +358,7 @@
                 <!-- Row 2 Completed-->
 
                 <!-- Row 3 Started-->
-                <Grid Grid.Row="3" x:Name="statusPanel3" Visibility="Hidden">
+                <Grid Grid.Row="3" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
@@ -368,27 +371,30 @@
             BorderBrush="Transparent"
                 Content="CONTINUE" 
             Foreground="White" 
+                        Command="{Binding SaveChangesCommand}"
             Background="#91c84f">
+                      
 
 
-
-                        <Button.Resources>
+                        <Button.Style>
                             <Style TargetType="{x:Type Button}">
                                 <Style.Resources>
                                     <Style TargetType="{x:Type Border}">
                                         <Setter Property="CornerRadius" Value="5" />
-                                        <!--<Setter Property="BorderBrush" Value="Transparent" />-->
+                                       
+                                        <Setter Property="BorderBrush" Value="Transparent" />
                                     </Style>
                                 </Style.Resources>
+                         
                             </Style>
-                        </Button.Resources>
+                        </Button.Style>
                     </Button>
                     <Button 
             Grid.Column="0"
                 x:Name="CancelBtn"
-            BorderBrush="Transparent"
-            BorderThickness="1" Margin="15,10,10,10"
             
+            BorderThickness="1" Margin="15,10,10,10"
+            BorderBrush="Transparent"
                 Content="Cancel" 
             Foreground="Black" 
                        
@@ -402,7 +408,13 @@
                                     <Style TargetType="{x:Type Border}">
                                         <Setter Property="CornerRadius" Value="5" />
                                         <Setter Property="BorderBrush" Value="Transparent" />
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#5D9115"/>
+                                            </Trigger>
+                                        </Style.Triggers>
                                     </Style>
+                                  
                                 </Style.Resources>
                             </Style>
                         </Button.Resources>
