--- a/ideaForge/Pages/DashboardPages/PendingRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/PendingRidePage.xaml
@@ -376,9 +376,14 @@ xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                         <Button   BorderThickness="1"  
                           Margin="0,0,10,0" 
                           Height="35" Width="130" 
-                          BorderBrush="Black" 
+                         
                           Content="CANCEL" Command="{Binding CancelChanges_Command}" 
-                          Foreground="White" Background="#A9ABB1" >
+                          BorderBrush="Transparent"
+              
+            Foreground="Black" 
+                       
+            Background="#E9E9E9"
+                                  >
                             <Button.Resources>
                                 <Style TargetType="{x:Type Button}">
                                     <Style.Resources>
@@ -391,9 +396,12 @@ xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
                         </Button>
                         <Button   
                           BorderThickness="1" Height="35"
-                          Width="130"  BorderBrush="Black" 
-                          Content="SAVE CHANGES" Foreground="White" 
-                          Background="#91c84f" 
+                          Width="130" 
+                          Content="SAVE CHANGES"
+                               BorderBrush="Transparent"
+             
+            Foreground="White" 
+            Background="#91c84f"
                           Command="{Binding SaveChanges_Command}">
                             <Button.Resources>
                                 <Style TargetType="{x:Type Button}">
