--- a/ideaForge/Pages/LoginPages/OTPVerification.xaml
+++ b/ideaForge/Pages/LoginPages/OTPVerification.xaml
@@ -3,8 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ideaForge" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="40,50,40,0">
+        xmlns:local="clr-namespace:ideaForge" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             SizeChanged="UserControl_SizeChanged"
+             >
+    <Grid x:Name="loginControl" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="40,50,40,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
             <RowDefinition Height="auto"/>
