--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -176,11 +176,11 @@
                                 <RowDefinition Height="*"/>
                                 
                             </Grid.RowDefinitions>
-                            <Image  Source="/Images/bell.png" Height="25" Margin="0,10,180,10" Grid.Column="0" ></Image>
+                            <Image  Source="/Images/bell.png" Height="25" Margin="0,10,10,10" Grid.Column="0" ></Image>
 
 
                          
-                            <Grid Grid.Row="0" MouseLeftButtonUp="Grid_MouseLeftButtonUp" HorizontalAlignment="Right" >
+                            <Grid Grid.Column="1" Grid.Row="0" MouseLeftButtonUp="Grid_MouseLeftButtonUp" MouseEnter="TextBlock_MouseEnter" HorizontalAlignment="Right" >
                                 
                                 <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -205,7 +205,7 @@
                                 FontSize="15"
                                 Grid.Column="1"></Label>
 
-                                <Image Source="/Images/down-arrow.png"
+                                <Image  Source="/Images/down-arrow.png"
                                    Height="20" Grid.Column="2" />
 
                             </Grid>
@@ -255,6 +255,7 @@
 
                
                 <Border 
+                    MouseEnter="Border_MouseEnter"
                     Grid.Row="0"
                     Margin="15,15,15,15"
                   Background="#FFFFFF" Grid.ColumnSpan="3">
@@ -343,7 +344,7 @@
                        Foreground="Black"
                        FontWeight="Normal"
                              HorizontalContentAlignment="Right"      
-                       Content="Mumbai" />
+                       Content="{Binding PageLocation}" />
                         </StackPanel>
                     </Grid>
 
@@ -378,26 +379,43 @@
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
                         Background="White" 
-                       Width="180"
-                    Height="80"
-                    Margin="0,0,5,0"
+                       Width="120"
+                    Height="45"
+                    Margin="20,-50,20,0"
                     x:Name="trayProfile"
                     x:FieldModifier="public"
                     Visibility="Hidden"
+                    CornerRadius="8"
                         HorizontalAlignment="Right" >
                     <Border.Effect>
                         <DropShadowEffect Color="#00000017" BlurRadius="8" Opacity=".1"/>
                     </Border.Effect>
-                    <TextBlock 
+                    <Grid>
+                       
+                        <Label
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Top"
+                            Margin="0,-20,0,0" FontFamily="Marlett" FontSize="20" Foreground="White" Content="5"/>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,-3,0,0"  VerticalAlignment="Center"  Width="15" Height="15" Source="/Images/iconLogout.png"/>
+                            <TextBlock 
+                        
                         Text="Logout" 
-                        TextDecorations="Underline" 
-                        Foreground="Blue" 
-                        FontStretch="Expanded" 
+                  
+                        Foreground="#000000" 
+                        
                         FontSize="18"
-                        Margin="30,10"
+                        Margin="5,10"
                         Cursor="Hand"
+                                FontWeight="Regular"
+                                FontFamily="Euclid Circular A"
                         MouseLeftButtonUp="logout_MouseLeftDownUp"
+                              
                         />
+                        </StackPanel>
+                       
+                    </Grid>
+               
 
                 </Border >
             </Grid>
