--- a/ideaForge/Pages/DashboardPages/ProfilePage.xaml
+++ b/ideaForge/Pages/DashboardPages/ProfilePage.xaml
@@ -34,7 +34,7 @@
                          VerticalAlignment="Center"
                          Margin="30,0,0,0">
             <Ellipse.Fill>
-                <ImageBrush ImageSource="{Binding ProfileModel.image}"/>
+                <ImageBrush ImageSource="{Binding ProfileModel.Image}"/>
             </Ellipse.Fill>
         </Ellipse>
 
